Changed DTO for requests only, Adjusted GetAll, added CustomValidator