@@ -1,25 +1,19 @@
 package com.pagejump.scrumboard.service;
 
-import com.pagejump.scrumboard.dto.TaskDTO;
+import com.pagejump.scrumboard.dto.TaskRequestDTO;
 import com.pagejump.scrumboard.exception.NoAvailableTaskListException;
 import com.pagejump.scrumboard.exception.TaskDeletedException;
 import com.pagejump.scrumboard.exception.TaskNotFoundException;
-import com.pagejump.scrumboard.mapper.TaskDTOMapper;
 import com.pagejump.scrumboard.model.Task;
 import com.pagejump.scrumboard.model.enums.TaskStatus;
 import com.pagejump.scrumboard.repository.TaskRepository;
-import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.Filter;
-import org.hibernate.Session;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,24 +21,14 @@ import java.util.stream.Collectors;
 public class TaskService {
 
     private final TaskRepository taskRepository;
-    private final EntityManager entityManager;
-    private final TaskDTOMapper taskDTOMapper;
 
 
-    // TODO: Send appropriate response message when there are no tasks.
     // Getting all tasks.
-    public List<TaskDTO> getAllTasks(boolean isDeleted) {
-        Session session = entityManager.unwrap(Session.class);
-        Filter filter = session.enableFilter("deletedTaskFilter");
-        filter.setParameter("isDeleted", isDeleted);
-
-        List<TaskDTO> tasks =
-                taskRepository.findAll()
-                        .stream()
-                        .map(taskDTOMapper)
-                        .collect(Collectors.toList());
-
-        session.disableFilter("deletedTaskFilter");
+    public List<Task> getAllTasks(boolean isDeleted) {
+        List<Task> tasks = taskRepository.findAll()
+                .stream()
+                .filter(task -> task.isDeleted() == isDeleted)
+                .toList();
 
         if (tasks.isEmpty()) throw new NoAvailableTaskListException(
                 "There are no tasks to show where isDeleted = " + isDeleted);
@@ -62,12 +46,10 @@ public class TaskService {
     }
 
     // Inserting new tasks
-    // TODO: Ask whether I should send the Task DTO or the Task Entity.
-    public Task createTask(TaskDTO taskDto) {
-
+    public Task createTask(TaskRequestDTO taskRequestDto) {
         // This method takes a JSON response body containing the needed information.
         return taskRepository.save(
-                new Task(taskDto.getTitle(), taskDto.getDescription())
+                new Task(taskRequestDto.getTitle(), taskRequestDto.getDescription())
         );
     }
 
@@ -87,7 +69,7 @@ public class TaskService {
 
     // For updating an existing task
     @Transactional
-    public Task updateTask(Long taskId, TaskDTO update) {
+    public Task updateTask(Long taskId, TaskRequestDTO update) {
         // Checks whether a task with the given id exists.
         Task task = taskRepository
                 .findById(taskId)
@@ -112,7 +94,7 @@ public class TaskService {
 
         // Checks whether progress change is not null and must be within the choices.
         if (!Objects.equals(task.getStatus(), update.getStatus())) {
-            task.setStatus(TaskStatus.valueOf(update.getStatus()));
+            task.setStatus(TaskStatus.valueOf(update.getStatus().toUpperCase()));
         }
 
         return task;
